# Dumb-ToDo-yew

./: 2  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/sample_todo_yew/: Cargo.toml  index.html  tailwind.config.js
crates/sample_todo_yew/src/: main.rs  todo.rs
crates/simple_server/: Cargo.toml
crates/simple_server/src/: main.rs
