[workspace]
resolver = "2"
members = [ 
    "crates/sample_todo_yew",
    "crates/simple_server",
    "crates/common",
]


[workspace.package]
version = "0.0.1"
authors = [ "Michele Arena <michelearena46@gmail.com>" ]
edition = "2024"
license = "AGPL-3.0"

[workspace.dependencies]
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
