[package]
name = "simple_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
redis = "0.24"
common = { path = "../common" }
deadpool-redis = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }
tower-http = {version = "0.6.2", features = ["trace"] }
log = { workspace = true }
